[UI catalog] feat: Add sleketon component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -3098,6 +3098,67 @@
          </div>
         </div>
        </section>
+
+       <!-----------------------------------------------------------------------
+       -- Progress
+       ------------------------------------------------------------------------>
+       <section class="uic_container child_section">
+        <h3 class="uic_heading h3" id="toc_skeleton">Skeleton</h3>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Basic</h4>
+         <div class="example_flex_column flex_align_stretch">
+          <div class="example_flex_row">
+           <div class="ui_skeleton text"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton circle"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton box"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton box rounded"></div>
+          </div>
+         </div>
+        </div>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Pulse</h4>
+         <div class="example_flex_column flex_align_stretch">
+          <div class="example_flex_row">
+           <div class="ui_skeleton pulse text"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton pulse circle"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton pulse box"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton pulse box rounded"></div>
+          </div>
+         </div>
+        </div>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Wave</h4>
+         <div class="example_flex_column flex_align_stretch">
+          <div class="example_flex_row">
+           <div class="ui_skeleton wave text"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton wave circle"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton wave box"></div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_skeleton wave box rounded"></div>
+          </div>
+         </div>
+        </div>
+       </section>
       </section>
 
       <!------------------------------------------------------------------------
@@ -3196,7 +3257,7 @@
          <div class="example_flex_column">
           <div class="example_flex_row">
            <button class="ui_button primary full_rounded">Rounded Button</button>
-           <button class="ui_button primary full_rounded outlined">Rounted Button</button>
+           <button class="ui_button primary full_rounded outlined">Rounded Button</button>
           </div>
           <div class="example_flex_row">
            <button class="ui_button primary no_rounded">Square Button</button>
