--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -3100,7 +3100,7 @@
        </section>
 
        <!-----------------------------------------------------------------------
-       -- Progress
+       -- Skeleton
        ------------------------------------------------------------------------>
        <section class="uic_container child_section">
         <h3 class="uic_heading h3" id="toc_skeleton">Skeleton</h3>
@@ -3155,6 +3155,23 @@
           </div>
           <div class="example_flex_row">
            <div class="ui_skeleton wave box rounded"></div>
+          </div>
+         </div>
+        </div>
+       </section>
+
+       <!-----------------------------------------------------------------------
+       -- Snackbar
+       ------------------------------------------------------------------------>
+       <section class="uic_container child_section">
+        <h3 class="uic_heading h3" id="toc_snackbar">Snackbar</h3>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Basic</h4>
+         <div class="example_flex_column flex_align_stretch">
+          <div class="example_flex_row">
+           <div class="ui_button primary button_open_snackbar">Open snackbar</div>
+           <div class="ui_snackbar">Snackbar</div>
           </div>
          </div>
         </div>
