[UI catalog] feat: Add grow animation

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -2807,6 +2807,20 @@
              </div>
             </dialog>
            </div>
+           <div class="ui_button primary button_open_dialog">Open grow dialog</div>
+           <div class="ui_dialog grow">
+            <dialog class="dialog">
+             <div class="head">
+              <span>Dialog</span>
+             </div>
+             <div class="body">
+              Content
+             </div>
+             <div class="foot">
+              <button class="ui_button primary text button_close_dialog">Close</button>
+             </div>
+            </dialog>
+           </div>
            <div class="ui_button primary button_open_dialog">Open flash dialog</div>
            <div class="ui_dialog flash">
             <dialog class="dialog">
@@ -3192,6 +3206,12 @@
            </div>
            <div class="ui_button primary button_open_snackbar">Open slidein snackbar</div>
            <div class="ui_snackbar slidein">
+            <span>Snackbar</span>
+            <span class="flex_spacer"></span>
+            <span class="ui_icon icon_xmark background clickable button_close_snackbar"></span>
+           </div>
+           <div class="ui_button primary button_open_snackbar">Open grow snackbar</div>
+           <div class="ui_snackbar grow">
             <span>Snackbar</span>
             <span class="flex_spacer"></span>
             <span class="ui_icon icon_xmark background clickable button_close_snackbar"></span>
