--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -4271,6 +4271,42 @@
         </div>
        </section>
       </section>
+
+      <!------------------------------------------------------------------------
+      -- Navigations
+      ------------------------------------------------------------------------->
+      <section class="uic_container parent_section">
+       <h2 class="uic_heading h2" id="toc_navigations">Navigations</h2>
+
+       <!-----------------------------------------------------------------------
+       -- Button
+       ------------------------------------------------------------------------>
+       <section class="uic_container child_section">
+        <h3 class="uic_heading h3" id="toc_crumbs">Crumbs</h3>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Basic</h4>
+         <div class="example_flex_column">
+          <div class="example_flex_row">
+           <ul class="ui_crumbs">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+           </ul>
+          </div>
+         </div>
+         <div class="example_flex_column">
+          <div class="example_flex_row">
+           <ul class="ui_crumbs angle">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+           </ul>
+          </div>
+         </div>
+        </div>
+       </section>
+      </section>
      </main>
     </div>
    </div>
