[UI catalog] feat: Add badge component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -86,6 +86,64 @@
        <h2 class="uic_heading h2" id="toc_datas">Datas</h2>
 
        <!-----------------------------------------------------------------------
+       -- Badge
+       ------------------------------------------------------------------------>
+       <section class="uic_container child_section">
+        <h3 class="uic_heading h3" id="toc_badge">Badge</h3>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Basic</h4>
+         <div class="example_flex_column padding_top_sm">
+          <div class="example_flex_row">
+           <div class="ui_badge">
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge">
+            <span class="badge_content">999+</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+          </div>
+         </div>
+        </div>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Colors</h4>
+         <div class="example_flex_column padding_top_sm">
+          <div class="example_flex_row">
+           <div class="ui_badge primary">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge secondary">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge error">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge warning">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge info">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+           <div class="ui_badge success">
+            <span class="badge_content">3</span>
+            <div class="ui_icon icon_envelope"></div>
+           </div>
+          </div>
+         </div>
+        </div>
+       </section>
+
+       <!-----------------------------------------------------------------------
        -- Heading
        ------------------------------------------------------------------------>
        <section class="uic_container child_section">
