[UI catalog] feat: Brush up design

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -4366,6 +4366,8 @@
           <div class="example_flex_row">
            <input type="password" class="ui_text_field" placeholder="Password">
            <input type="number" class="ui_text_field" placeholder="Number">
+           <input type="date" class="ui_text_field">
+           <input type="time" class="ui_text_field">
           </div>
          </div>
         </div>
