--- a/dev/system/service/spa/index.html
+++ b/dev/system/service/spa/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meower</title>
+  <link data-trunk rel="css" href="public/style.scss" />
  </head>
  <body></body>
 </html>
