[UI catalog] feat: Add function to show code

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -300,7 +300,7 @@
           <div class="example_flex_row">
            <span class="ui_heading h1">Heading 1</span>
            <span class="ui_heading h2">Heading 2</span>
-           <span class="uic_heading h3">Heading 3</span>
+           <span class="ui_heading h3">Heading 3</span>
            <span class="ui_heading h4">Heading 4</span>
            <span class="ui_heading h5">Heading 5</span>
            <span class="ui_heading h6">Heading 6</span>
