[UI catalog] feat: Place copy button for example

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -5121,8 +5121,11 @@
      </main>
     </div>
    </div>
-  </div>
 
+   <span id="snackbar_copy_code" class="ui_snackbar success">Copy successful!</span>
+   <span id="snackbar_copy_code_error" class="ui_snackbar error">Copy failed...</span>
+
+  </div>
   <script src="assets/js/index.js"></script>
  </body>
 </html>
