[UI catalog] fix: Code block style

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -276,7 +276,7 @@
 <span>}</span></pre>
           </div>
           <div class="example_flex_row">
-           <pre class="ui_code_block number bar">
+           <pre class="ui_code_block number separator">
 <span>function get_random_int( min_ = 0, max_ = 100 )</span>
 <span>{</span>
 <span>    const range = max - min + 1;</span>
