[UI catalog] feat: Copy the color code by clicking

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -5122,8 +5122,8 @@
     </div>
    </div>
 
-   <span id="snackbar_copy_code" class="ui_snackbar success">Copy successful!</span>
-   <span id="snackbar_copy_code_error" class="ui_snackbar error">Copy failed...</span>
+   <span id="snackbar_copy" class="ui_snackbar success">Copy successful!</span>
+   <span id="snackbar_copy_error" class="ui_snackbar error">Copy failed...</span>
 
   </div>
   <script src="assets/js/index.js"></script>
