[UI catalog] feat: Add tooltip component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -2936,6 +2936,86 @@
           </div>
         </div>
        </section>
+
+       <!-----------------------------------------------------------------------
+       -- Tooltip
+       ------------------------------------------------------------------------>
+       <section class="uic_container child_section">
+        <h3 class="uic_heading h3" id="toc_tooltip">Tooltip</h3>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Basic</h4>
+         <div class="example_flex_column">
+          <div class="example_flex_row">
+           <div class="ui_tooltip margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+          </div>
+         </div>
+        </div>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Colors</h4>
+         <div class="example_flex_column">
+          <div class="example_flex_row">
+           <div class="ui_tooltip primary margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip secondary margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip error margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip warning margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip info margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip success margin_top_3xl margin_horizontal_lg">
+            <span>Hover me</span>
+            <div class="description">Content</div>
+           </div>
+          </div>
+         </div>
+        </div>
+
+        <div class="uic_container example_box">
+         <h4 class="ui_heading h4">Position</h4>
+         <div class="example_flex_column flex_align_center padding_3xl">
+          <div class="example_flex_row">
+           <div class="ui_tooltip top width_6xl text_align_center">
+            <span>Top</span>
+            <div class="description">Content</div>
+           </div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_tooltip left width_6xl text_align_center">
+            <span>Left</span>
+            <div class="description">Content</div>
+           </div>
+           <div class="ui_tooltip right width_6xl text_align_center">
+            <span>Right</span>
+            <div class="description">Content</div>
+           </div>
+          </div>
+          <div class="example_flex_row">
+           <div class="ui_tooltip bottom width_6xl text_align_center">
+            <span>Bottom</span>
+            <div class="description">Content</div>
+           </div>
+          </div>
+         </div>
+        </div>
+
+       </section>
       </section>
 
       <!------------------------------------------------------------------------
@@ -5122,8 +5202,8 @@
     </div>
    </div>
 
-   <span id="snackbar_copy" class="ui_snackbar success">Copy successful!</span>
-   <span id="snackbar_copy_error" class="ui_snackbar error">Copy failed...</span>
+   <span id="snackbar_copy" class="ui_snackbar slidein success">Copy successful!</span>
+   <span id="snackbar_copy_error" class="ui_snackbar slidein error">Copy failed...</span>
 
   </div>
   <script src="assets/js/index.js"></script>
