--- a/dev/system/service/spa/index.html
+++ b/dev/system/service/spa/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meower</title>
-  <link data-trunk rel="css" href="public/ui.scss" />
-  <link data-trunk rel="css" href="public/style.scss" />
+  <link data-trunk rel="scss" href="public/scss/style.scss" />
+  <link data-trunk rel="css" href="public/style.css" />
  </head>
  <body></body>
 </html>
