--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -15,8 +15,8 @@
     <!--------------------------------------------------------------------------
     -- Sidebar
     --------------------------------------------------------------------------->
-    <aside id="sidebar" class="ui_sidebar ui_box border_right z_index_front open">
-     <div class="ui_sidebar_inner flex flex_column flex_gap_xl overflow_hidden">
+    <aside id="sidebar" class="uic_sidebar open">
+     <div class="uic_sidebar_inner">
       <div class="ui_heading h2">UI catalog</div>
 
       <div class="flex flex_column flex_gap_sm">
