--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -5110,20 +5110,20 @@
        </section>
 
        <!-----------------------------------------------------------------------
-       -- Tabs
+       -- Tab
        ------------------------------------------------------------------------>
        <section class="uic_container child_section">
-        <h3 class="uic_heading h3" id="toc_tabs">Tabs</h3>
+        <h3 class="uic_heading h3" id="toc_tab">Tab</h3>
 
         <div class="uic_container example_box">
          <h4 class="ui_heading h4">Basic</h4>
          <div class="example_flex_column flex_align_stretch">
           <div class="example_flex_row">
-           <div class="ui_tabs">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
          </div>
@@ -5133,51 +5133,51 @@
          <h4 class="ui_heading h4">Colors</h4>
          <div class="example_flex_column flex_align_stretch">
           <div class="example_flex_row">
-           <div class="ui_tabs primary">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab primary">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
           <div class="example_flex_row">
-           <div class="ui_tabs secondary">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab secondary">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
           <div class="example_flex_row">
-           <div class="ui_tabs error">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab error">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
           <div class="example_flex_row">
-           <div class="ui_tabs warning">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab warning">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
           <div class="example_flex_row">
-           <div class="ui_tabs info">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab info">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
           <div class="example_flex_row">
-           <div class="ui_tabs success">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab success">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
          </div>
@@ -5187,11 +5187,11 @@
          <h4 class="ui_heading h4">Vertical</h4>
          <div class="example_flex_column flex_align_stretch">
           <div class="example_flex_row">
-           <div class="ui_tabs vertical">
-            <button class="tab padding_vertical_md padding_horizontal_lg active">Tab1</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab2</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg" disabled>Tab3</button>
-            <button class="tab padding_vertical_md padding_horizontal_lg">Tab4</button>
+           <div class="ui_tab vertical">
+            <button class="tab active">Tab1</button>
+            <button class="tab">Tab2</button>
+            <button class="tab" disabled>Tab3</button>
+            <button class="tab">Tab4</button>
            </div>
           </div>
          </div>
